desing pattern qestion added