@@ -4,6 +4,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class GroupingElement {
@@ -41,10 +42,19 @@ public class GroupingElement {
         Employee employee3 = new Employee(103, "Aakash", "CIVIL");
         Employee employee4 = new Employee(104, "Sumit", "IT");
 
-        List<Employee> employeeList = List.of(employee, employee2, employee3, employee4);
+        List<Employee> employeeList = Arrays.asList(employee, employee2, employee3, employee4);
 //        Map<String, List<Employee>> collect = employeeList.stream().collect(Collectors.groupingBy(e -> e.department));
         Map<String, Long> collect = employeeList.stream().collect(Collectors.groupingBy(e -> e.department, Collectors.counting()));
         System.out.println(collect);
 
+//        grouping based on the department and value will be id
+        employeeList.stream().collect(Collectors.groupingBy(e->e.department));
+        Map<String, List<Integer>> collect1 = employeeList.stream().collect(Collectors.groupingBy(e -> e.department, Collectors.mapping(e -> e.id, Collectors.toList())));
+        System.out.println(collect1);
+
+//        count all zeros and ones
+        int[] arr = {1,0,1,1,0,0,1,1};
+        Map<Integer, Long> longMap = Arrays.stream(arr).boxed().collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+        System.out.println(longMap);
     }
 }
